package service

import (
	"errors"
	"fmt"
	"io"

	tvrpc "tensorvault/pkg/api/tvrpc/v1"
	"tensorvault/pkg/app"
	"tensorvault/pkg/ingester"
	"tensorvault/pkg/storage"
	"tensorvault/pkg/types"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type DataService struct {
	tvrpc.UnimplementedDataServiceServer
	app *app.App
}

func NewDataService(application *app.App) *DataService {
	return &DataService{
		app: application,
	}
}

// =============================================================================
// 1. Upload (Client-Side Streaming)
// =============================================================================

// Upload æ¥æ”¶å®¢æˆ·ç«¯çš„æµå¼ä¸Šä¼ 
// åè®®çº¦å®šï¼šç¬¬ä¸€å¸§å¿…é¡»æ˜¯ Metaï¼Œåç»­å¸§æ˜¯ ChunkData
func (s *DataService) Upload(stream grpc.ClientStreamingServer[tvrpc.UploadRequest, tvrpc.UploadResponse]) error {
	// --- Step 1: æ¡æ‰‹é˜¶æ®µ (Handshake) ---
	// æˆ‘ä»¬å¿…é¡»æ‰‹åŠ¨è¯»å–ç¬¬ä¸€æ¡æ¶ˆæ¯ï¼Œä»¥ç¡®ä¿å®ƒåŒ…å«å…ƒæ•°æ®
	firstReq, err := stream.Recv()
	if err == io.EOF {
		return status.Error(codes.InvalidArgument, "empty stream: expected metadata frame")
	}
	if err != nil {
		return status.Errorf(codes.Internal, "failed to receive metadata: %v", err)
	}

	// éªŒè¯ç¬¬ä¸€å¸§æ˜¯å¦ä¸º Meta
	// è¿™é‡Œç”¨åˆ°äº†ç”Ÿæˆä»£ç é‡Œçš„ GetMeta()ï¼Œå®ƒä¼šè‡ªåŠ¨æ£€æŸ¥ Payload ç±»å‹
	meta := firstReq.GetMeta()
	if meta == nil {
		return status.Error(codes.InvalidArgument, "protocol violation: first frame must be FileMeta")
	}

	// (å¯é€‰) è¿™é‡Œå¯ä»¥è®°å½•æ—¥å¿—ï¼Œæ¯”å¦‚ "Receiving file: meta.Path"
	fmt.Printf("ğŸš€ [Upload] Receiving: %s\n", meta.Path)

	// --- Step 2: ç»„è£…é˜¶æ®µ (Wiring) ---
	// ä½¿ç”¨æˆ‘ä»¬å†™çš„é€‚é…å™¨ï¼ŒæŠŠå‰©ä½™çš„ gRPC æµä¼ªè£…æˆ io.Reader
	// æ³¨æ„ï¼šstream å·²ç»è¢«è¯»å–äº†ä¸€æ¬¡ï¼Œåç»­ Recv ä¼šè‡ªåŠ¨è¯»ä¸‹ä¸€å¸§
	streamReader := NewGrpcStreamReader(stream)

	// åˆ›å»º Ingester
	// æ³¨æ„ï¼šå¤ç”¨ app.Storeï¼Œè¿™ä½¿å¾—æ‰€æœ‰ä¸Šä¼ è‡ªåŠ¨äº«å— Redis ç¼“å­˜å’Œ S3 å­˜å‚¨èƒ½åŠ›
	ing := ingester.NewIngester(s.app.Store)

	// --- Step 3: æ‰§è¡Œé˜¶æ®µ (Execution) ---
	// è°ƒç”¨æ ¸å¿ƒé€»è¾‘ã€‚Ingester ä¼šä¸æ–­ä» streamReader è¯»å–ï¼Œç›´åˆ° io.EOF
	ctx := stream.Context() // è·å–ä¸Šä¸‹æ–‡ä»¥å¤„ç†å–æ¶ˆ
	fileNode, err := ing.IngestFile(ctx, streamReader)
	if err != nil {
		return status.Errorf(codes.Internal, "ingestion failed: %v", err)
	}

	// --- Step 4: å“åº”é˜¶æ®µ (Response) ---
	// å‘é€å”¯ä¸€çš„å“åº”åŒ…å¹¶å…³é—­æµ
	return stream.SendAndClose(&tvrpc.UploadResponse{
		Hash:      fileNode.ID().String(),
		TotalSize: fileNode.TotalSize,
	})
}

// =============================================================================
// 2. Download (Server-Side Streaming)
// =============================================================================

// Download å¤„ç†ä¸‹è½½è¯·æ±‚
func (s *DataService) Download(req *tvrpc.DownloadRequest, stream grpc.ServerStreamingServer[tvrpc.DownloadResponse]) error {
	// --- Step 1: å‚æ•°æ ¡éªŒ ---
	// æˆ‘ä»¬ä¹‹å‰åœ¨ Proto é‡ŒåŠ äº† buf.validateï¼Œæ‰€ä»¥è¿™é‡Œ req åº”è¯¥æ˜¯åˆæ³•çš„
	// ä½†ä¸ºäº†ä¿é™©ï¼Œå¯ä»¥å†æ¬¡æ ¡éªŒ Hash æ ¼å¼
	hash := types.Hash(req.Hash)
	if !hash.IsValid() {
		return status.Errorf(codes.InvalidArgument, "invalid hash format")
	}

	fmt.Printf("ğŸ“¦ [Download] Serving: %s\n", hash)

	// --- Step 2: ç»„è£…é€‚é…å™¨ ---
	// æŠŠ gRPC stream ä¼ªè£…æˆ io.Writer
	streamWriter := NewGrpcStreamWriter(stream)

	// --- Step 3: æ‰§è¡Œå¯¼å‡º ---
	// åˆ›å»º Exporter
	exp := s.app.GetExporter() // ç¨åè¦åœ¨ App é‡ŒåŠ è¿™ä¸ª helper æ–¹æ³•ï¼Œæˆ–è€…ç›´æ¥ new

	// è°ƒç”¨æ ¸å¿ƒé€»è¾‘
	// æ³¨æ„ï¼šExporter å†…éƒ¨ä¼šæ£€æµ‹ streamWriter æ˜¯å¦æ”¯æŒ WriteAtã€‚
	// æ˜¾ç„¶ GrpcStreamWriter ä¸æ”¯æŒï¼Œæ‰€ä»¥ Exporter ä¼šè‡ªåŠ¨é™çº§ä¸ºä¸²è¡Œæµå¼ä¼ è¾“ï¼Œ
	// è¿™æ­£æ˜¯ gRPC Server Streaming æ‰€éœ€è¦çš„æ¨¡å¼ã€‚
	err := exp.ExportFile(stream.Context(), hash, streamWriter)

	// --- Step 4: é”™è¯¯å¤„ç† ---
	if err != nil {
		// æ˜ å°„æ ¸å¿ƒå±‚é”™è¯¯åˆ° gRPC çŠ¶æ€ç 
		if errors.Is(err, storage.ErrNotFound) {
			return status.Errorf(codes.NotFound, "object %s not found", hash)
		}
		return status.Errorf(codes.Internal, "export failed: %v", err)
	}

	return nil
}
